--- a/main.html
+++ b/main.html
@@ -8,6 +8,37 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post"">
+		<label for="name">Name*</label>
+	<input type="text" id="name" name="name" required><br>
+
+	<label for="email">Email*</label>
+	<input type="email" id="email" name="email" required><br>
+
+	<label for="gender">Gender*</label>
+	<input type="radio" id="gender" name="gender" value="male" required>Male
+	<input type="radio" id="gender" name="gender" value="female" required>Female <br>
+
+	<label for="cars">Car Brands*</label>
+	<select name="cars" id="cars" required>
+		<option value="">Select a car brand</option>
+		<option value="BMW">BMW</option>
+		<option value="Audi">Audi</option>
+		<option value="Mercedez">Mercedez</option>
+	</select><br>
+
+	<label for="age">Age*</label>
+	<input type="number" id="age" name="age" required><br>
+
+	<label for="dob">DOB*</label>
+	<input type="date" id="dob" name="dob" required><br>
+
+	<label for="password">Password*</label>
+	<input type="password" id="password" name="password" required><br>
+
+	<button type="submit">Submit</button>
+	</form>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
